--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
                 <h2 class="visually-hidden">Особенности работы студии</h2>
                 <div class="container container-advantages">
                 <ul class="list advantages-list">
-                    <li class="advantages-item">
+                    <li class="advantages-item advantages-icon-antenna">
                         <h3 class="section-title-element">Внимание к деталям</h3>
                         <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию
                             позиции.</p>
                     </li>
-                    <li class="advantages-item">
+                    <li class="advantages-item advantages-icon-clock">
                         <h3 class="section-title-element">Пунктуальность</h3>
                         <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров
                             влечет за собой.</p>
                     </li>
-                    <li class="advantages-item">
+                    <li class="advantages-item advantages-icon-diagram">
                         <h3 class="section-title-element">Планирование</h3>
                         <p class="section-text">Равным образом консультация с широким активом в значительной степени
                             обуславливает.</p>
                     </li>
-                    <li class="advantages-item">
+                    <li class="advantages-item advantages-icon-astronaut">
                         <h3 class="section-title-element">Современные технологии</h3>
                         <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых
                             заданий.</p>
