--- a/portfolio.html
+++ b/portfolio.html
@@ -18,23 +18,19 @@
 <body>
     <header class="header">
         <div class="container header-container">
-            <div class="container-site-nav">
                 <nav class="site-nav">
-                    <a href="./index.html" class="logo"><span class="color-web">Web</span><span
+                    <a href="./index.html" lang="en" class="logo"><span class="color-web">Web</span><span
                             class="color-studio">Studio</span></a>
                     <ul class="list menu-list">
-                        <li class="nav-link"><a href="./index.html" class="link">Студия</a></li>
-                        <li class="nav-link"><a href="./portfolio.html" class="link">Портфолио</a></li>
-                        <li><a href="" class="link">Контакты</a></li>
+                        <li class="nav-link"><a href="./index.html" target="_blank" class="link current">Студия</a></li>
+                        <li class="nav-link"><a href="./portfolio.html" target="_blank" class="link">Портфолио</a></li>
+                        <li class="nav-link"><a href="" class="link">Контакты</a></li>
                     </ul>
                 </nav>
-            </div>
-            <div>
                 <ul class="list contacts-list">
                     <li class="contacts-list-item"><a href="mailto:info@devstudio.com" class="link-contacts">info@devstudio.com</a></li>
                     <li><a href="tel:+380961111111" class="link-contacts">+38 096 111 11 11</a></li>
                 </ul>
-            </div>
         </div>
     </header>
 
@@ -50,7 +46,7 @@
                 <li><button type="button" class="button">Дизайн</button></li>
                 <li><button type="button" class="button">Маркетинг</button></li>
             </ul>
-            <div class="container-product">
+
                 <ul class="list menu-product">
 
                     <li class="item-card">
@@ -123,7 +119,7 @@
                         </div>
                     </li>
                 </ul>
-            </div>
+    
             </div>
         </section>
     </main>
@@ -131,16 +127,15 @@
     <!-- Подвал страницы -->
     <footer class="footer">
         <div class="container-footer">
-            <a href="./index.html" class="logo logo-footer"><span class="color-web">Web</span><span
+            <a href="./index.html" lang="en" class="logo logo-footer"><span class="color-web">Web</span><span
                     class="color-studio">Studio</span></a>
-            <address class="addres-footer">
-                <div class="address"> г. Киев, пр-т Леси Украинки, 26</div>
-                <div class="list-link-footer">
-                    <ul class="list">
-                        <li><a href="mailto:info@devstudio.co" class="link-footer">info@example.com</a></li>
-                        <li><a href="tel:+380961111111" class="link-footer">+38 099 111 11 11</a></li>
-                    </ul>
-                </div>
+            <address class="address">
+                <p>г. Киев, пр-т Леси Украинки, 26</p>
+                <ul class="list list-link-footer">
+                    <li class="items-link-footer"><a href="mailto:info@devstudio.co" class="link-footer">info@example.com</a>
+                    </li>
+                    <li class="items-link-footer"><a href="tel:+380961111111" class="link-footer">+38 099 111 11 11</a></li>
+                </ul>
             </address>
         </div>
     </footer>
