--- a/index.html
+++ b/index.html
@@ -19,19 +19,30 @@
 <body>
     <header class="header">
         <div class="container header-container">
-                <nav class="site-nav">
-                    <a href="./index.html" lang="en" class="logo"><span class="color-web">Web</span><span
-                            class="color-studio">Studio</span></a>
-                    <ul class="list menu-list">
-                        <li class="nav-link"><a href="./index.html" target="_blank" class="link current">Студия</a></li>
-                        <li class="nav-link"><a href="./portfolio.html" target="_blank" class="link">Портфолио</a></li>
-                        <li class="nav-link"><a href="" class="link">Контакты</a></li>
-                    </ul>
-                </nav>
-                <ul class="list contacts-list">
-                    <li class="contacts-list-item"><a href="mailto:info@devstudio.com" class="link-contacts">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="link-contacts">+38 096 111 11 11</a></li>
+            <nav class="site-nav">
+                <a href="./index.html" lang="en" class="logo"><span class="color-web">Web</span><span
+                        class="color-studio">Studio</span></a>
+                <ul class="list menu-list">
+                    <li class="nav-link"><a href="./index.html" target="_blank" class="link current">Студия</a></li>
+                    <li class="nav-link"><a href="./portfolio.html" target="_blank" class="link">Портфолио</a></li>
+                    <li class="nav-link"><a href="" class="link">Контакты</a></li>
                 </ul>
+            </nav>
+            <ul class="list contacts-list">
+                <li class="contacts-list-item">
+                    <a href="mailto:info@devstudio.com" class="link-contacts">
+                        <svg class="icon-envelope">
+                            <use href="./images/icons.svg#icon-envelope" width="16" height="12" >
+                            </use>
+                        </svg>info@devstudio.com</a>
+                </li>
+                <li class="contacts-list-item"><a href="tel:+380961111111" class="link-contacts">
+                        <svg class="icon-smartphone">
+                            <use href="./images/icons.svg#icon-smartphone">
+                            </use>
+                        </svg>+38 096 111 11 11</a>
+                </li>
+            </ul>
         </div>
     </header>
     <main>
