--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,8 @@
                     <a href="./index.html" lang="en" class="logo"><span class="color-web">Web</span><span
                             class="color-studio">Studio</span></a>
                     <ul class="list menu-list">
-                        <li class="nav-link"><a href="./index.html" target="_blank" class="link current">Студия</a></li>
-                        <li class="nav-link"><a href="./portfolio.html" target="_blank" class="link">Портфолио</a></li>
+                        <li class="nav-link"><a href="./index.html" target="_blank" class="link">Студия</a></li>
+                        <li class="nav-link"><a href="./portfolio.html" target="_blank" class="link current">Портфолио</a></li>
                         <li class="nav-link"><a href="" class="link">Контакты</a></li>
                     </ul>
                 </nav>
