Добавляет секцию "Постоянные клиенты"

--- a/index.html
+++ b/index.html
@@ -332,6 +332,46 @@
                 </ul>
             </div>
         </section>
+        <!-- Постоянные клиенты -->
+        <section class="section">
+            <div class="container"> 
+            <h2 class="section-title">Постоянные клиенты</h2>
+            <ul class="list regular-clients-list">
+                <li class="regular-clients-items">
+                    <a href="http://" target="_blank" rel="noopener noreferrer" class="regular-clients-link">
+                        <svg class="icon-clients">
+                            <use href="./images/icons.svg#icon-ya-end-co">
+                            </use>
+                        </svg></a>
+                </li>
+                <li class="regular-clients-items">                    <a href="http://" target="_blank" rel="noopener noreferrer" class="regular-clients-link">
+                    <svg class="icon-clients">
+                        <use href="./images/icons.svg#icon-company-tagline-here">
+                        </use>
+                    </svg></a></li>
+                <li class="regular-clients-items">                    <a href="http://" target="_blank" rel="noopener noreferrer" class="regular-clients-link">
+                    <svg class="icon-clients">
+                        <use href="./images/icons.svg#icon-company">
+                        </use>
+                    </svg></a></li>
+                <li class="regular-clients-items">                    <a href="http://" target="_blank" rel="noopener noreferrer" class="regular-clients-link">
+                    <svg class="icon-clients">
+                        <use href="./images/icons.svg#icon-brand">
+                        </use>
+                    </svg></a></li>
+                <li class="regular-clients-items">                    <a href="http://" target="_blank" rel="noopener noreferrer" class="regular-clients-link">
+                    <svg class="icon-clients">
+                        <use href="./images/icons.svg#icon-foster-peters">
+                        </use>
+                    </svg></a></li>
+                <li class="regular-clients-items">                    <a href="http://" target="_blank" rel="noopener noreferrer" class="regular-clients-link">
+                    <svg class="icon-clients">
+                        <use href="./images/icons.svg#icon-company-tagline">
+                        </use>
+                    </svg></a></li>
+            </ul>
+        </div>
+        </section>
     </main>
     <!-- Подвал страницы -->
     <footer class="footer">
