Добавляет соц.сети в футере

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                 <li class="employee-social-networks-items">
                                     <a href="http://" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
-                                        <svg class="icon-instagram">
+                                        <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-instagram">
                                             </use>
                                         </svg>
@@ -148,7 +148,7 @@
 
                                     <a href="http://" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
-                                        <svg class="icon-twitter">
+                                        <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-twitter">
                                             </use>
                                         </svg>
@@ -159,7 +159,7 @@
 
                                     <a href="http://" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
-                                        <svg class="icon-facebook">
+                                        <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-facebook">
                                             </use>
                                         </svg>
@@ -169,7 +169,7 @@
                                 <li class="employee-social-networks-items">
                                     <a href="http://" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
-                                        <svg class="icon-linkedin">
+                                        <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-linkedin">
                                             </use>
                                         </svg>
@@ -189,7 +189,7 @@
                                 <li class="employee-social-networks-items">
                                     <a href="http://" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
-                                        <svg class="icon-instagram">
+                                        <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-instagram">
                                             </use>
                                         </svg>
@@ -199,7 +199,7 @@
 
                                     <a href="http://" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
-                                        <svg class="icon-twitter">
+                                        <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-twitter">
                                             </use>
                                         </svg>
@@ -210,7 +210,7 @@
 
                                     <a href="http://" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
-                                        <svg class="icon-facebook">
+                                        <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-facebook">
                                             </use>
                                         </svg>
@@ -220,7 +220,7 @@
                                 <li class="employee-social-networks-items">
                                     <a href="http://" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
-                                        <svg class="icon-linkedin">
+                                        <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-linkedin">
                                             </use>
                                         </svg>
@@ -239,7 +239,7 @@
                                 <li class="employee-social-networks-items">
                                     <a href="http://" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
-                                        <svg class="icon-instagram">
+                                        <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-instagram">
                                             </use>
                                         </svg>
@@ -249,7 +249,7 @@
 
                                     <a href="http://" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
-                                        <svg class="icon-twitter">
+                                        <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-twitter">
                                             </use>
                                         </svg>
@@ -260,7 +260,7 @@
 
                                     <a href="http://" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
-                                        <svg class="icon-facebook">
+                                        <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-facebook">
                                             </use>
                                         </svg>
@@ -270,7 +270,7 @@
                                 <li class="employee-social-networks-items">
                                     <a href="http://" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
-                                        <svg class="icon-linkedin">
+                                        <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-linkedin">
                                             </use>
                                         </svg>
@@ -289,7 +289,7 @@
                                 <li class="employee-social-networks-items">
                                     <a href="http://" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
-                                        <svg class="icon-instagram">
+                                        <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-instagram">
                                             </use>
                                         </svg>
@@ -299,7 +299,7 @@
 
                                     <a href="http://" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
-                                        <svg class="icon-twitter">
+                                        <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-twitter">
                                             </use>
                                         </svg>
@@ -310,7 +310,7 @@
 
                                     <a href="http://" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
-                                        <svg class="icon-facebook">
+                                        <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-facebook">
                                             </use>
                                         </svg>
@@ -320,7 +320,7 @@
                                 <li class="employee-social-networks-items">
                                     <a href="http://" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
-                                        <svg class="icon-linkedin">
+                                        <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-linkedin">
                                             </use>
                                         </svg>
@@ -334,48 +334,54 @@
         </section>
         <!-- Постоянные клиенты -->
         <section class="section">
-            <div class="container"> 
-            <h2 class="section-title">Постоянные клиенты</h2>
-            <ul class="list regular-clients-list">
-                <li class="regular-clients-items">
-                    <a href="http://" target="_blank" rel="noopener noreferrer" class="regular-clients-link">
-                        <svg class="icon-clients">
-                            <use href="./images/icons.svg#icon-ya-end-co">
-                            </use>
-                        </svg></a>
-                </li>
-                <li class="regular-clients-items">                    <a href="http://" target="_blank" rel="noopener noreferrer" class="regular-clients-link">
-                    <svg class="icon-clients">
-                        <use href="./images/icons.svg#icon-company-tagline-here">
-                        </use>
-                    </svg></a></li>
-                <li class="regular-clients-items">                    <a href="http://" target="_blank" rel="noopener noreferrer" class="regular-clients-link">
-                    <svg class="icon-clients">
-                        <use href="./images/icons.svg#icon-company">
-                        </use>
-                    </svg></a></li>
-                <li class="regular-clients-items">                    <a href="http://" target="_blank" rel="noopener noreferrer" class="regular-clients-link">
-                    <svg class="icon-clients">
-                        <use href="./images/icons.svg#icon-brand">
-                        </use>
-                    </svg></a></li>
-                <li class="regular-clients-items">                    <a href="http://" target="_blank" rel="noopener noreferrer" class="regular-clients-link">
-                    <svg class="icon-clients">
-                        <use href="./images/icons.svg#icon-foster-peters">
-                        </use>
-                    </svg></a></li>
-                <li class="regular-clients-items">                    <a href="http://" target="_blank" rel="noopener noreferrer" class="regular-clients-link">
-                    <svg class="icon-clients">
-                        <use href="./images/icons.svg#icon-company-tagline">
-                        </use>
-                    </svg></a></li>
-            </ul>
-        </div>
+            <div class="container">
+                <h2 class="section-title">Постоянные клиенты</h2>
+                <ul class="list regular-clients-list">
+                    <li class="regular-clients-items">
+                        <a href="http://" target="_blank" rel="noopener noreferrer" class="regular-clients-link">
+                            <svg class="icon-clients">
+                                <use href="./images/icons.svg#icon-ya-end-co">
+                                </use>
+                            </svg></a>
+                    </li>
+                    <li class="regular-clients-items"> <a href="http://" target="_blank" rel="noopener noreferrer"
+                            class="regular-clients-link">
+                            <svg class="icon-clients">
+                                <use href="./images/icons.svg#icon-company-tagline-here">
+                                </use>
+                            </svg></a></li>
+                    <li class="regular-clients-items"> <a href="http://" target="_blank" rel="noopener noreferrer"
+                            class="regular-clients-link">
+                            <svg class="icon-clients">
+                                <use href="./images/icons.svg#icon-company">
+                                </use>
+                            </svg></a></li>
+                    <li class="regular-clients-items"> <a href="http://" target="_blank" rel="noopener noreferrer"
+                            class="regular-clients-link">
+                            <svg class="icon-clients">
+                                <use href="./images/icons.svg#icon-brand">
+                                </use>
+                            </svg></a></li>
+                    <li class="regular-clients-items"> <a href="http://" target="_blank" rel="noopener noreferrer"
+                            class="regular-clients-link">
+                            <svg class="icon-clients">
+                                <use href="./images/icons.svg#icon-foster-peters">
+                                </use>
+                            </svg></a></li>
+                    <li class="regular-clients-items"> <a href="http://" target="_blank" rel="noopener noreferrer"
+                            class="regular-clients-link">
+                            <svg class="icon-clients">
+                                <use href="./images/icons.svg#icon-company-tagline">
+                                </use>
+                            </svg></a></li>
+                </ul>
+            </div>
         </section>
     </main>
     <!-- Подвал страницы -->
     <footer class="footer">
         <div class="container-footer">
+            <div class="container-footer-adress">
             <a href="./index.html" lang="en" class="logo logo-footer"><span class="color-web">Web</span><span
                     class="color-studio">Studio</span></a>
             <address class="address">
@@ -389,6 +395,37 @@
                 </ul>
             </address>
         </div>
+        <div class="container-footer-social-networks">
+            <p class="footer-appeal">присоединяйтесь</p>
+            <ul class=" list footer-social-list">
+                <li class="footer-social-items"><a href="http://" target="_blank" rel="noopener noreferrer"
+                    class="footer-social-link">
+                    <svg class="icon-social-link">
+                        <use href="./images/icons.svg#icon-instagram">
+                        </use>
+                    </svg></a></li>
+                <li class="footer-social-items"><a href="http://" target="_blank" rel="noopener noreferrer"
+                    class="footer-social-link">
+                    <svg class="icon-social-link">
+                        <use href="./images/icons.svg#icon-twitter">
+                        </use>
+                    </svg></a></li>
+                <li class="footer-social-items"><a href="http://" target="_blank" rel="noopener noreferrer"
+                    class="footer-social-link">
+                    <svg class="icon-social-link">
+                        <use href="./images/icons.svg#icon-facebook">
+                        </use>
+                    </svg></a></li>
+                <li class="footer-social-items"><a href="http://" target="_blank" rel="noopener noreferrer"
+                    class="footer-social-link">
+                    <svg class="icon-social-link">
+                        <use href="./images/icons.svg#icon-linkedin">
+                        </use>
+                    </svg></a></li>
+            </ul>
+        </div>
+        </div>
+
     </footer>
 </body>
 
