--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,19 @@
                     </ul>
                 </nav>
                 <ul class="list contacts-list">
-                    <li class="contacts-list-item"><a href="mailto:info@devstudio.com" class="link-contacts">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="link-contacts">+38 096 111 11 11</a></li>
+                    <li class="contacts-list-item">
+                        <a href="mailto:info@devstudio.com" class="link-contacts">
+                            <svg class="icon-envelope">
+                                <use href="./images/icons.svg#icon-envelope" width="16" height="12">
+                                </use>
+                            </svg>info@devstudio.com</a>
+                    </li>
+                    <li class="contacts-list-item"><a href="tel:+380961111111" class="link-contacts">
+                            <svg class="icon-smartphone">
+                                <use href="./images/icons.svg#icon-smartphone">
+                                </use>
+                            </svg>+38 096 111 11 11</a>
+                    </li>
                 </ul>
         </div>
     </header>
@@ -127,17 +138,51 @@
     <!-- Подвал страницы -->
     <footer class="footer">
         <div class="container-footer">
+            <div class="container-footer-adress">
             <a href="./index.html" lang="en" class="logo logo-footer"><span class="color-web">Web</span><span
                     class="color-studio">Studio</span></a>
             <address class="address">
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
                 <ul class="list list-link-footer">
-                    <li class="items-link-footer"><a href="mailto:info@devstudio.co" class="link-footer">info@example.com</a>
+                    <li class="items-link-footer"><a href="mailto:info@devstudio.co"
+                            class="link-footer">info@example.com</a>
                     </li>
-                    <li class="items-link-footer"><a href="tel:+380961111111" class="link-footer">+38 099 111 11 11</a></li>
+                    <li class="items-link-footer"><a href="tel:+380961111111" class="link-footer">+38 099 111 11 11</a>
+                    </li>
                 </ul>
             </address>
         </div>
+        <div class="container-footer-social-networks">
+            <p class="footer-appeal">присоединяйтесь</p>
+            <ul class=" list footer-social-list">
+                <li class="footer-social-items"><a href="http://" target="_blank" rel="noopener noreferrer"
+                    class="footer-social-link">
+                    <svg class="icon-social-link">
+                        <use href="./images/icons.svg#icon-instagram">
+                        </use>
+                    </svg></a></li>
+                <li class="footer-social-items"><a href="http://" target="_blank" rel="noopener noreferrer"
+                    class="footer-social-link">
+                    <svg class="icon-social-link">
+                        <use href="./images/icons.svg#icon-twitter">
+                        </use>
+                    </svg></a></li>
+                <li class="footer-social-items"><a href="http://" target="_blank" rel="noopener noreferrer"
+                    class="footer-social-link">
+                    <svg class="icon-social-link">
+                        <use href="./images/icons.svg#icon-facebook">
+                        </use>
+                    </svg></a></li>
+                <li class="footer-social-items"><a href="http://" target="_blank" rel="noopener noreferrer"
+                    class="footer-social-link">
+                    <svg class="icon-social-link">
+                        <use href="./images/icons.svg#icon-linkedin">
+                        </use>
+                    </svg></a></li>
+            </ul>
+        </div>
+        </div>
+
     </footer>
 </body>
 </html>
