Добавляет тени при ховере в Портфолио

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <a href="./index.html" lang="en" class="logo"><span class="color-web">Web</span><span
                         class="color-studio">Studio</span></a>
                 <ul class="list menu-list">
-                    <li class="nav-link"><a href="./index.html" target="_blank" class="link current">Студия</a></li>
-                    <li class="nav-link"><a href="./portfolio.html" target="_blank" class="link">Портфолио</a></li>
+                    <li class="nav-link"><a href="./index.html" class="link current">Студия</a></li>
+                    <li class="nav-link"><a href="./portfolio.html" class="link">Портфолио</a></li>
                     <li class="nav-link"><a href="" class="link">Контакты</a></li>
                 </ul>
             </nav>
@@ -136,7 +136,7 @@
                             <p class="position-employee">Product Designer</p>
                             <ul class="list employee-social-networks">
                                 <li class="employee-social-networks-items">
-                                    <a href="http://" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
                                         <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-instagram">
@@ -146,7 +146,7 @@
                                 </li>
                                 <li class="employee-social-networks-items">
 
-                                    <a href="http://" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
                                         <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-twitter">
@@ -157,7 +157,7 @@
                                 </li>
                                 <li class="employee-social-networks-items">
 
-                                    <a href="http://" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
                                         <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-facebook">
@@ -167,7 +167,7 @@
 
                                 </li>
                                 <li class="employee-social-networks-items">
-                                    <a href="http://" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
                                         <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-linkedin">
@@ -187,7 +187,7 @@
                             <p class="position-employee">Frontend Developer</p>
                             <ul class="list employee-social-networks">
                                 <li class="employee-social-networks-items">
-                                    <a href="http://" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
                                         <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-instagram">
@@ -197,7 +197,7 @@
                                 </li>
                                 <li class="employee-social-networks-items">
 
-                                    <a href="http://" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
                                         <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-twitter">
@@ -208,7 +208,7 @@
                                 </li>
                                 <li class="employee-social-networks-items">
 
-                                    <a href="http://" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
                                         <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-facebook">
@@ -218,7 +218,7 @@
 
                                 </li>
                                 <li class="employee-social-networks-items">
-                                    <a href="http://" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
                                         <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-linkedin">
@@ -237,7 +237,7 @@
                             <p class="position-employee">Marketing</p>
                             <ul class="list employee-social-networks">
                                 <li class="employee-social-networks-items">
-                                    <a href="http://" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
                                         <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-instagram">
@@ -247,7 +247,7 @@
                                 </li>
                                 <li class="employee-social-networks-items">
 
-                                    <a href="http://" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
                                         <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-twitter">
@@ -258,7 +258,7 @@
                                 </li>
                                 <li class="employee-social-networks-items">
 
-                                    <a href="http://" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
                                         <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-facebook">
@@ -268,7 +268,7 @@
 
                                 </li>
                                 <li class="employee-social-networks-items">
-                                    <a href="http://" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
                                         <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-linkedin">
@@ -287,7 +287,7 @@
                             <p class="position-employee">UI Designer</p>
                             <ul class="list employee-social-networks">
                                 <li class="employee-social-networks-items">
-                                    <a href="http://" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
                                         <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-instagram">
@@ -297,7 +297,7 @@
                                 </li>
                                 <li class="employee-social-networks-items">
 
-                                    <a href="http://" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
                                         <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-twitter">
@@ -308,7 +308,7 @@
                                 </li>
                                 <li class="employee-social-networks-items">
 
-                                    <a href="http://" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
                                         <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-facebook">
@@ -318,7 +318,7 @@
 
                                 </li>
                                 <li class="employee-social-networks-items">
-                                    <a href="http://" target="_blank" rel="noopener noreferrer"
+                                    <a href="" target="_blank" rel="noopener noreferrer"
                                         class="employee-social-networks-link">
                                         <svg class="icon-social-link">
                                             <use href="./images/icons.svg#icon-linkedin">
@@ -338,37 +338,37 @@
                 <h2 class="section-title">Постоянные клиенты</h2>
                 <ul class="list regular-clients-list">
                     <li class="regular-clients-items">
-                        <a href="http://" target="_blank" rel="noopener noreferrer" class="regular-clients-link">
+                        <a href="" target="_blank" rel="noopener noreferrer" class="regular-clients-link">
                             <svg class="icon-clients">
                                 <use href="./images/icons.svg#icon-ya-end-co">
                                 </use>
                             </svg></a>
                     </li>
-                    <li class="regular-clients-items"> <a href="http://" target="_blank" rel="noopener noreferrer"
+                    <li class="regular-clients-items"> <a href="" target="_blank" rel="noopener noreferrer"
                             class="regular-clients-link">
                             <svg class="icon-clients">
                                 <use href="./images/icons.svg#icon-company-tagline-here">
                                 </use>
                             </svg></a></li>
-                    <li class="regular-clients-items"> <a href="http://" target="_blank" rel="noopener noreferrer"
+                    <li class="regular-clients-items"> <a href="" target="_blank" rel="noopener noreferrer"
                             class="regular-clients-link">
                             <svg class="icon-clients">
                                 <use href="./images/icons.svg#icon-company">
                                 </use>
                             </svg></a></li>
-                    <li class="regular-clients-items"> <a href="http://" target="_blank" rel="noopener noreferrer"
+                    <li class="regular-clients-items"> <a href="" target="_blank" rel="noopener noreferrer"
                             class="regular-clients-link">
                             <svg class="icon-clients">
                                 <use href="./images/icons.svg#icon-brand">
                                 </use>
                             </svg></a></li>
-                    <li class="regular-clients-items"> <a href="http://" target="_blank" rel="noopener noreferrer"
+                    <li class="regular-clients-items"> <a href="" target="_blank" rel="noopener noreferrer"
                             class="regular-clients-link">
                             <svg class="icon-clients">
                                 <use href="./images/icons.svg#icon-foster-peters">
                                 </use>
                             </svg></a></li>
-                    <li class="regular-clients-items"> <a href="http://" target="_blank" rel="noopener noreferrer"
+                    <li class="regular-clients-items"> <a href="" target="_blank" rel="noopener noreferrer"
                             class="regular-clients-link">
                             <svg class="icon-clients">
                                 <use href="./images/icons.svg#icon-company-tagline">
@@ -398,25 +398,25 @@
         <div class="container-footer-social-networks">
             <p class="footer-appeal">присоединяйтесь</p>
             <ul class=" list footer-social-list">
-                <li class="footer-social-items"><a href="http://" target="_blank" rel="noopener noreferrer"
+                <li class="footer-social-items"><a href="" target="_blank" rel="noopener noreferrer"
                     class="footer-social-link">
                     <svg class="icon-social-link">
                         <use href="./images/icons.svg#icon-instagram">
                         </use>
                     </svg></a></li>
-                <li class="footer-social-items"><a href="http://" target="_blank" rel="noopener noreferrer"
+                <li class="footer-social-items"><a href="" target="_blank" rel="noopener noreferrer"
                     class="footer-social-link">
                     <svg class="icon-social-link">
                         <use href="./images/icons.svg#icon-twitter">
                         </use>
                     </svg></a></li>
-                <li class="footer-social-items"><a href="http://" target="_blank" rel="noopener noreferrer"
+                <li class="footer-social-items"><a href="" target="_blank" rel="noopener noreferrer"
                     class="footer-social-link">
                     <svg class="icon-social-link">
                         <use href="./images/icons.svg#icon-facebook">
                         </use>
                     </svg></a></li>
-                <li class="footer-social-items"><a href="http://" target="_blank" rel="noopener noreferrer"
+                <li class="footer-social-items"><a href="" target="_blank" rel="noopener noreferrer"
                     class="footer-social-link">
                     <svg class="icon-social-link">
                         <use href="./images/icons.svg#icon-linkedin">
